[gd_scene load_steps=12 format=3 uid="uid://d3o80tyx6lyn6"]

[ext_resource type="Script" path="res://Scenes/GameScene.gd" id="1_evaqv"]
[ext_resource type="PackedScene" uid="uid://cifr4t2atydot" path="res://Scenes/UIScenes/LevelSelect.tscn" id="2_vwkla"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="3_7xx70"]
[ext_resource type="Texture2D" uid="uid://bh8rs8o7ylcti" path="res://Assets/UI/Buttons/blue_button12.png" id="3_66iv5"]
[ext_resource type="Texture2D" uid="uid://c3157da4uwt4m" path="res://Assets/Towers/towerDefense_tile249.png" id="4_scrtf"]
[ext_resource type="Texture2D" uid="uid://c1rcipllvpvot" path="res://Assets/Towers/towerDefense_tile251.png" id="5_x8c8l"]
[ext_resource type="Texture2D" uid="uid://bgyoeaxblchia" path="res://Assets/UI/Menu/play.png" id="7_x0hlq"]
[ext_resource type="Texture2D" uid="uid://bpelxpdafuj8v" path="res://Assets/UI/Menu/pause.png" id="8_arcmb"]
[ext_resource type="Texture2D" uid="uid://dw7l67qxoe84u" path="res://Assets/UI/Menu/fastForward.png" id="9_6mwi2"]
[ext_resource type="FontFile" uid="uid://cmvhle8a2rai2" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="10_vwsyo"]
[ext_resource type="Texture2D" uid="uid://h8hfcvhgcdfp" path="res://Assets/UI/Art/wrench.png" id="11_18sn2"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_evaqv")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_7xx70")

[node name="LevelSelect" parent="UI" instance=ExtResource("2_vwkla")]

[node name="HUD" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildMenu" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 60.0
offset_bottom = 360.0
grow_horizontal = 0
theme_override_constants/separation = 15

[node name="DIV" type="Control" parent="UI/HUD/BuildMenu"]
layout_mode = 2

[node name="gun" type="TextureButton" parent="UI/HUD/BuildMenu" groups=["build_buttons"]]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_66iv5")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildMenu/gun"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_scrtf")

[node name="missile" type="TextureButton" parent="UI/HUD/BuildMenu" groups=["build_buttons"]]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_66iv5")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildMenu/missile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_x8c8l")

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 2

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_x0hlq")
texture_pressed = ExtResource("8_arcmb")
stretch_mode = 0

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControls"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("9_6mwi2")
stretch_mode = 0

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.392157)
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SymbolEuro" type="Label" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("10_vwsyo")
theme_override_font_sizes/font_size = 48
text = "â‚¬"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("10_vwsyo")
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SymbolLives" type="TextureRect" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("11_18sn2")

[node name="Lives" type="Label" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("10_vwsyo")
theme_override_font_sizes/font_size = 32
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DIV" type="Control" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/SpeedUp" to="UI" method="_on_speed_up_pressed"]
